[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "PySeedRecover"
authors = [{name = "Benjamin Braatz", email = "bb@bbraatz.eu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python",
               "Programming Language :: Python :: 3 :: Only",
               "Programming Language :: Python :: 3.7",
               "Programming Language :: Python :: 3.10",
               "License :: OSI Approved :: MIT License",
               "Operating System :: OS Independent"]
dynamic = ["version", "description"]
dependencies = ["ecpy"]

[project.urls]
Home = "https://github.com/HeptaSean/PySeedRecover"

[project.scripts]
seedrecover = "seedrecover.cli:main"

[tool.flit.module]
name = "seedrecover"
